# c_programming_course

./: README.md
BrainFuckCompiler/: .file_read.c.swo  .file_read.c.swp  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BF  BF.c  BF.vcxproj  BF.vcxproj.filters  BrainFuckCompiler.sln  BrainFuckCompiler.vcxproj  BrainFuckCompiler.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  a.out  cmake_install.cmake  compiler.c  compiler.h  file_read.c  fileread  paraser.c  paraser.h  paraser.h.gch  test.bf
BrainFuckCompiler/BF.dir/Release/: BF.exe.recipe
BrainFuckCompiler/BF.dir/Release/BF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BrainFuckCompiler/Release/: BF  test.bf
BrainFuckCompiler/src/: .compiler.c.swp  BF.c  compiler.c  paraser.c
BrainFuckCompiler/src/headers/: build_control.h  compiler.h
BrainFuckCompiler/x64/Debug/: BrainFuckCompiler.exe.recipe  BrainFuckCompiler.ilk  BrainFuckCompiler.vcxproj.FileListAbsolute.txt  test.bf  vc143.idb
BrainFuckCompiler/x64/Debug/BrainFuc.a77e02fe.tlog/: BrainFuckCompiler.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.3.tlog  link.write.1.tlog
BrainFuckCompiler/x64/Release/: BrainFuckCompiler.exe.recipe  BrainFuckCompiler.iobj  BrainFuckCompiler.ipdb  BrainFuckCompiler.vcxproj.FileListAbsolute.txt
FindRoad/: FindRoad.vcxproj.filters  main.c  map.c  (+2 more)
(+111 files in other folders)
